Fix navbar collapsing on mobile devices.

--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -2,14 +2,6 @@
   background-color: darkgray;
 }
 
-.link-nav {
-  text-decoration: none;
-}
-
-.link-nav:hover {
-  text-decoration: none;
-}
-
 .button-navbar {
   background-color: transparent;
   border: none;
